bug: Fixed missing border on players-table class

--- a/src/App.css
+++ b/src/App.css
@@ -145,7 +145,7 @@ main {
   grid-row: 4 / 5;
 }
 
-.roster .players-table {
+.players-table {
   border-spacing: 0;
   border: 1px solid #000;
   border-radius: 20px 20px 0 0;
